# geofile

./: README.md  develop.sh  pyproject.toml
.github/workflows/: ci.yml
src/geofile/: geofile.py
tests/: test_geofile.py
