[project]
name = "geofile"
version = "1.0.0"
description = "Geospatial File Conversion Tool"
authors = [
    { name = "Nat Liu", email = "n8wyliu@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "geopandas>=0.13",
    "fiona>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
